--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
 
 *{
     font-family: 'Poppins', sans-serif;
-}
-
-body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body{
+    
     background:url(/assets/bg-desktop.png)no-repeat top center/cover;
+    height: 100vh;
 }
 
 
@@ -27,7 +29,8 @@ body{
 }
 
 .container{
-    max-width: 920px;
+    max-width: 588px;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
