--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 :root {
 
---bg-url: url(./assets/bg-desktop.png);
+--bg-url:url(./assets/background.png);
 --highlight-color-:rgba(255, 255, 255, 0.2);
 
 }
